Fixed humidity and wind not showing

--- a/scss/layout/_currentForecast.scss
+++ b/scss/layout/_currentForecast.scss
@@ -106,12 +106,7 @@
             padding-top: 0.5rem;
             font-weight: normal;
             color: $fadecolor;
-            @include mqMaxWMinH(1024px, 700px) {
-                @include flexCenter;
-            }
-            @include mqh(1080px) {
-                @include flexCenter;
-            }
+            @include flexCenter;
         }
 
         .wind {
@@ -121,12 +116,7 @@
             padding-top: 0.5rem;
             font-weight: normal;
             color: $fadecolor;
-            @include mqMaxWMinH(1024px, 700px) {
-                @include flexCenter;
-            }
-            @include mqh(1080px) {
-                @include flexCenter;
-            }
+            @include flexCenter;
         }
     }
 }
